Refactor: Improve code readability with better names and comments in header, banner and information section

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <title>TBC x USAID</title>
   </head>
   <body>
+    <!-- header section  -->
     <header class="site-header">
       <div class="header-container container">
-        <a class="tbc-academy-logo" href="#" aria-label="Home">
+        <a class="header-logo" href="#" aria-label="Home">
           <img
             src="assets/images/common-images/logo.svg"
             alt="TBC Academy Logo"
@@ -38,9 +39,9 @@
             </li>
           </ul>
         </nav>
-        <div class="respo-fade">
-          <nav class="mobile-navigation">
-            <ul class="mobile-menu-list">
+        <div class="overlay-fade">
+          <nav class="mobile-menu">
+            <ul class="mobile-menu-items">
               <li>
                 <a href="#">მთავარი</a>
               </li>
@@ -56,14 +57,16 @@
             </ul>
           </nav>
         </div>
-        <div class="burger-menu">
-          <div class="burger burger1"></div>
-          <div class="burger burger2"></div>
-          <div class="burger burger3"></div>
+        <div class="mobile-menu-toggle">
+          <div class="menu-bar bar1"></div>
+          <div class="menu-bar bar2"></div>
+          <div class="menu-bar bar3"></div>
         </div>
       </div>
     </header>
+    <!-- in main tag I have the main body -->
     <main class="main-container">
+      <!-- banner section -->
       <section class="banner-container">
         <div class="container">
           <div class="banner-title">
@@ -72,6 +75,7 @@
           </div>
         </div>
       </section>
+      <!-- the section of information about program -->
       <section class="information-container">
         <div class="container">
           <div class="course-description">
@@ -857,7 +861,6 @@
         </div>
       </div>
     </footer>
-
     <script type="module" src="scripts/main.js"></script>
   </body>
 </html>
