Refactor: Improve code readability with better names and comments in slider

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           </div>
         </div>
       </section>
+      <!-- the section of learning courses list section -->
       <section class="learning-courses">
         <div class="container">
           <div class="section-title">
@@ -108,7 +109,7 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
                       <h3 class="text">iOS Development</h3>
                     </div>
@@ -116,7 +117,7 @@
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
@@ -135,16 +136,16 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="course-title text">React</h3>
+                      <h3 class="text">React</h3>
                     </div>
 
                     <div class="registration-status">
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
@@ -163,16 +164,16 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="course-title text">React</h3>
+                      <h3 class="text">React</h3>
                     </div>
 
                     <div class="registration-status">
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
@@ -191,16 +192,16 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="course-title text">React</h3>
+                      <h3 class="text">React</h3>
                     </div>
 
                     <div class="registration-status">
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
@@ -219,16 +220,16 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="course-title text">React</h3>
+                      <h3 class="text">React</h3>
                     </div>
 
                     <div class="registration-status">
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
@@ -248,16 +249,16 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="course-title text">React</h3>
+                      <h3 class="text">React</h3>
                     </div>
 
                     <div class="registration-status">
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
@@ -276,16 +277,16 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="course-title text">React</h3>
+                      <h3 class="text">React</h3>
                     </div>
 
                     <div class="registration-status">
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
@@ -304,16 +305,16 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="course-title text">React</h3>
+                      <h3 class="text">React</h3>
                     </div>
 
                     <div class="registration-status">
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="arrow"
@@ -333,16 +334,16 @@
                   />
                 </div>
                 <div class="course-body">
-                  <div class="course-text">
+                  <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="course-title text">React</h3>
+                      <h3 class="text">React</h3>
                     </div>
 
                     <div class="registration-status">
                       <p class="text">რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
-                  <div class="course-info">
+                  <div class="course-details">
                     <img
                       src="./assets/images/common-images/arrow.svg"
                       alt="course details arrow"
@@ -372,21 +373,39 @@
 
           <div class="slide">
             <div class="slides-box">
-              <img src="./assets/images/slider-images/usaid.png" />
-              <img src="./assets/images/slider-images/space.png" />
-              <img src="./assets/images/slider-images/tineti.png" />
+              <img
+                src="./assets/images/slider-images/usaid.png"
+                alt="USAID logo"
+              />
+              <img
+                src="./assets/images/slider-images/space.png"
+                alt="Space Int. logo"
+              />
+              <img
+                src="./assets/images/slider-images/tineti.png"
+                alt="Tineti logo"
+              />
             </div>
           </div>
           <div class="slide">
             <div class="slides-box">
-              <img src="./assets/images/slider-images/tegeta.png" />
-              <img src="./assets/images/slider-images/spectre.png" />
-              <img src="./assets/images/slider-images/tbc-lizingi.png" />
+              <img
+                src="./assets/images/slider-images/tegeta.png"
+                alt="Tegeta logo"
+              />
+              <img
+                src="./assets/images/slider-images/spectre.png"
+                alt="Spectre logo"
+              />
+              <img
+                src="./assets/images/slider-images/tbc-lizingi.png"
+                alt="TBC lizingi"
+              />
             </div>
           </div>
           <div class="slide">
             <div class="last-slide">
-              <img src="./assets/images/slider-images/UFC.png" />
+              <img src="./assets/images/slider-images/UFC.png" alt="UFC logo" />
             </div>
           </div>
           <svg
