add mixins in scss files to handle common styles

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">iOS Development</h3>
+                      <h3>iOS Development</h3>
                     </div>
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -138,11 +138,11 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">React</h3>
+                      <h3>React</h3>
                     </div>
 
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -166,11 +166,11 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">React</h3>
+                      <h3>React</h3>
                     </div>
 
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -194,11 +194,11 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">React</h3>
+                      <h3>React</h3>
                     </div>
 
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -222,11 +222,11 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">React</h3>
+                      <h3>React</h3>
                     </div>
 
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -251,11 +251,11 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">React</h3>
+                      <h3>React</h3>
                     </div>
 
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -279,11 +279,11 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">React</h3>
+                      <h3>React</h3>
                     </div>
 
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -307,11 +307,11 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">React</h3>
+                      <h3>React</h3>
                     </div>
 
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -336,11 +336,11 @@
                 <div class="course-body">
                   <div class="course-body-text">
                     <div class="course-title">
-                      <h3 class="text">React</h3>
+                      <h3>React</h3>
                     </div>
 
                     <div class="registration-status">
-                      <p class="text">რეგისტრაცია დასრულებულია</p>
+                      <p>რეგისტრაცია დასრულებულია</p>
                     </div>
                   </div>
                   <div class="course-details">
@@ -356,6 +356,7 @@
           </div>
         </div>
       </section>
+      <!--slider section -->
       <section class="slider-section">
         <div class="slider-title container">
           <h2>პროექტის პარტნიორები</h2>
@@ -420,6 +421,7 @@
         </div>
         <div class="slider-bullets"></div>
       </section>
+      <!--frequently asked questions section -->
       <section class="faq-section">
         <div class="container-faq">
           <div class="faq-title">
@@ -527,10 +529,12 @@
         </div>
       </section>
     </main>
+    <!--footer of page -->
     <footer class="site-footer">
-      <div class="footer-terms">
+      <!--footer terms and conditions container -->
+      <div class="footer-terms closeTerms">
         <div class="footer-terms-container">
-          <div class="footer-terms-close">
+          <div class="footer-terms-close closeTerms">
             <img
               src="./assets/images/common-images/close.svg"
               alt="closing button"
@@ -822,10 +826,11 @@
                 <a href="https://www.tbcbank.ge/web/ka">www.tbcbank.ge</a> ”
               </p>
             </div>
-            <div class="footer-terms-close-btn">დახურვა</div>
+            <div class="footer-terms-close-btn closeTerms">დახურვა</div>
           </div>
         </div>
       </div>
+      <!-- footer section -->
       <div class="container">
         <div class="footer-container">
           <div class="logo-and-text">
